# snek

./: Cargo.toml
snek-engine/: Cargo.toml
snek-engine/src/: lib.rs
snek-wayland/: Cargo.toml  background_gen.py
snek-wayland/graphics-assets/: background.xcf  food.xcf  pause.xcf  snake.xcf
snek-wayland/src/: main.rs
src/: main.rs
surface/.cargo/: config
surface/capi/: Cargo.toml  test.py
surface/capi/src/: lib.rs
surface/crashes/: README.txt  id:000000,sig:04,src:000032,op:havoc,rep:4  id:000001,sig:04,src:000036,op:havoc,rep:4  id:000002,sig:04,src:000001+000071,op:splice,rep:2  id:000003,sig:04,src:000007+000073,op:splice,rep:2  id:000004,sig:04,src:000036+000081,op:splice,rep:32  id:000005,sig:04,src:000047+000081,op:splice,rep:8  id:000006,sig:04,src:000047+000081,op:splice,rep:8  id:000007,sig:04,src:000047+000082,op:splice,rep:32  id:000008,sig:04,src:000064+000081,op:splice,rep:2  id:000009,sig:04,src:000042+000078,op:splice,rep:4
surface/examples/: checker.rs  partred.rs
surface/src/: lib.rs  surface.rs
surface/src/colorspace/: colorargb.rs  mod.rs
surface/src/colorspace/conversion/: yuv2rgb.rs
surface/src/compositing/: mod.rs
